# aulalibre

./: .gitignore  .mcp.json  CLAUDE.md  Justfile  README.md  apk_extract.sh  assemblies_to_decompile.txt  assembly_inventory.md  auth_flow.md  cloud_storage_integration.md  data_models.md  datastore_protobuf_analysis.md  decompilation_analysis.md  default.nix  dex_decompilation_analysis.md  domain_concepts.md  esdh_journaling_analysis.md  extract_assemblies.py  messagingcenter_event_bus.md  milestone2_analysis.md  native_library_inventory.md  ncaula_staging_domain.md  notification_messaging.md  prd.apk_decompile.md  preference_storage_analysis.md  resource_analysis.md  security_analysis.md  shell.nix  task24_jadx_classes2_analysis.md
aula/aula-api/: Cargo.toml
aula/aula-api/src/: auth.rs  client.rs  e2e.rs  error.rs  lib.rs  response.rs  serde_helpers.rs  session.rs  token_store.rs
aula/aula-api/src/enums/: calendar.rs  common.rs  documents.rs  gallery.rs  messaging.rs  mod.rs  notifications.rs  presence.rs  profiles.rs
aula/aula-api/src/models/: calendar.rs  consent.rs  documents.rs  files.rs  gallery.rs  groups.rs  institutions.rs  messaging.rs  mod.rs  notifications.rs  onboarding.rs  posts.rs  presence.rs  profiles.rs  users.rs  (+1 more)
aula/aula-api/tests/: e2e_live_tests.rs  mock_api_tests.rs  model_serde_tests.rs  service_integration_tests.rs
aula/aula-cli/: Cargo.toml
aula/aula-cli/src/: callback_server.rs  config.rs  main.rs  output.rs  session_util.rs
aula/aula-fuse/: Cargo.toml
aula/aula-fuse/src/: cache.rs  fs.rs  inode_table.rs  main.rs  sanitize.rs  timestamp.rs
(+191 files in other folders)
