[package]
name = "aula-api"
version = "0.1.0"
edition = "2021"
description = "Rust client library for the Aula school platform API"

[dependencies]
base64 = "0.22"
dirs = "6"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
serde_repr = "0.1"
thiserror = "2"
url = "2"

[dev-dependencies]
http = "1"
wiremock = "0.6"
