[package]
name = "aula-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for interacting with the Aula school platform"

[dependencies]
aula-api = { path = "../aula-api" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
open = "5"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
