[package]
name = "aula-fuse"
version = "0.1.0"
edition = "2021"
description = "FUSE filesystem exposing Aula school platform data as a directory tree"

[dependencies]
aula-api = { path = "../aula-api" }
fuser = "0.15"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
